Added some content to home page component

--- a/frontend/src/app/user/home/home.component.html
+++ b/frontend/src/app/user/home/home.component.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+<app-product-carousel>
+
+</app-product-carousel>
+
+<app-product-category>
+
+</app-product-category>
+
+<app-new-arrivals>
+
+</app-new-arrivals>
+
+<app-flash-sale>
+
+</app-flash-sale>
