--- a/frontend/src/app/user/productdetails/productdetails.component.html
+++ b/frontend/src/app/user/productdetails/productdetails.component.html
@@ -1,1 +1,8 @@
-<p>productdetails works!</p>
+<app-product-summary>
+
+</app-product-summary>
+
+
+<app-product-information>
+  
+</app-product-information>
