Updated header, footer and homepage component

--- a/frontend/src/app/core/footer/footer-info/footer-info.component.html
+++ b/frontend/src/app/core/footer/footer-info/footer-info.component.html
@@ -1,1 +1,33 @@
-<p>footer-info works!</p>
+<footer class="footer">
+  <div class="section">
+    <h3>Website Name</h3>
+    <p>A short description about the website</p>
+    <p>Contact: +1234567890</p>
+    <p>Email: example@example.com</p>
+  </div>
+  <div class="section">
+    <h3>Company</h3>
+    <ul>
+      <li><a routerLink="/about">About</a></li>
+      <li><a routerLink="/about">Product</a></li>
+      <li><a routerLink="/contact">Contact</a></li>
+      <li><a routerLink="/blog">Blog</a></li>
+    </ul>
+  </div>
+  <div class="section">
+    <h3>Information</h3>
+    <ul>
+      <li><a href="#">Help Center</a></li>
+      <li><a href="#">Payment Methods</a></li>
+      <li><a href="#">Privacy Policy</a></li>
+    </ul>
+  </div>
+  <div class="section">
+    <h3>Follow Us</h3>
+    <div class="social-icons">
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-facebook-f"></i></a>
+    </div>
+  </div>
+</footer>
