--- a/frontend/src/app/core/footer/footer.component.html
+++ b/frontend/src/app/core/footer/footer.component.html
@@ -1,1 +1,11 @@
-<p>footer works!</p>
+<app-newsletter>
+
+</app-newsletter>
+
+<app-footer-info>
+
+</app-footer-info>
+
+<app-footer-copyright>
+
+</app-footer-copyright>
