--- a/frontend/src/app/core/footer/newsletter/newsletter.component.html
+++ b/frontend/src/app/core/footer/newsletter/newsletter.component.html
@@ -1,1 +1,17 @@
-<p>newsletter works!</p>
+<div class="newsletter-footer">
+  <div class="newsletter-footer__left">
+    <div class="newsletter-footer__icon">
+      <i class="fas fa-envelope"></i>
+    </div>
+    <div class="newsletter-footer__text">
+      <h1 class="newsletter-footer__title">Join our newsletter now!</h1>
+      <p class="newsletter-footer__description">Get the latest news and updates delivered straight to your inbox.</p>
+    </div>
+  </div>
+  <div class="newsletter-footer__right">
+    <form class="newsletter-footer__form">
+      <input type="email" placeholder="Enter your email address" class="newsletter-footer__input">
+      <button type="submit" class="newsletter-footer__button">Join</button>
+    </form>
+  </div>
+</div>
