--- a/frontend/src/app/core/header/topbar/topbar.component.html
+++ b/frontend/src/app/core/header/topbar/topbar.component.html
@@ -1,1 +1,23 @@
-<p>topbar works!</p>
+<div class="top-bar">
+  <div class="left-side">
+    <a href="#">
+      <i class="fab fa-facebook"></i>
+    </a>
+    <a href="#">
+      <i class="fab fa-twitter"></i>
+    </a>
+    <a href="#">
+      <i class="fab fa-instagram"></i>
+    </a>
+  </div>
+  <div class="right-side">
+    <div class="contact-info">
+      <span class="phone">555-1234</span>
+      <span class="email">contact@example.com</span>
+    </div>
+    <a href="#" class="account">
+      <i class="fas fa-user"> </i>
+      My Account
+    </a>
+  </div>
+</div>
