--- a/frontend/src/app/user/home/new-arrivals/new-arrivals.component.html
+++ b/frontend/src/app/user/home/new-arrivals/new-arrivals.component.html
@@ -1,9 +1,9 @@
-<p>new-arrivals works!</p>
+<h2>Arrivals</h2>
 
 
 
+<div class="app-new-arrivals-item-container">
+  <app-new-arrivals-item *ngFor="let arrival of arrivals" [arrival]="arrival">
 
-<!-- ngFor to show new arrivals -->
-<app-new-arrivals-item>
-
-</app-new-arrivals-item>
+  </app-new-arrivals-item>
+</div>
