--- a/frontend/src/app/user/home/product-carousel/product-carousel.component.html
+++ b/frontend/src/app/user/home/product-carousel/product-carousel.component.html
@@ -1,9 +1,4 @@
-<app-slideshow-carousel>
-
-</app-slideshow-carousel>
-
-
-<!-- ngFor to show two images -->
-<app-side-image-carousel>
-
-</app-side-image-carousel>
+<div class="container">
+  <app-slideshow-carousel class="app-slideshow-carousel"></app-slideshow-carousel>
+  <app-side-image-carousel class="app-side-image-carousel"> </app-side-image-carousel>
+</div>
