--- a/frontend/src/app/user/home/product-carousel/side-image-carousel/side-image-carousel.component.html
+++ b/frontend/src/app/user/home/product-carousel/side-image-carousel/side-image-carousel.component.html
@@ -1,1 +1,5 @@
-<p>side-image-carousel works!</p>
+<div class="side-image-container">
+  <app-side-image-carousel-item class="app-side-image-carousel-item" *ngFor="let c of components" [component]="c">
+
+  </app-side-image-carousel-item>
+</div>
