--- a/frontend/src/app/user/home/product-category/category-item/category-item.component.html
+++ b/frontend/src/app/user/home/product-category/category-item/category-item.component.html
@@ -1,1 +1,6 @@
-<p>category-item works!</p>
+<div class="icon-box">
+  <div class="icon">
+    <i class="fas fa-laptop fa-3x"></i> <!-- Font Awesome laptop icon at 3x size -->
+  </div>
+  <h2 class="title">{{ category }}</h2>
+</div>
