--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,12 @@
 <app-header></app-header>
 
-<router-outlet>
 
-</router-outlet>
+<main>
+
+  <router-outlet>
+
+  </router-outlet>
+
+</main>
 
 <app-footer></app-footer>
