--- a/frontend/src/app/user/home/flash-sale/flash-sale-item/flash-sale-item.component.html
+++ b/frontend/src/app/user/home/flash-sale/flash-sale-item/flash-sale-item.component.html
@@ -1,1 +1,11 @@
-<p>flash-sale-item works!</p>
+<div class="container">
+  <div class="product-sale">
+    <div class="product-discount"> {{ product.discount }}% discount</div>
+    <div class="product-display">
+      <img src="../../../../../assets/laptop.png" alt="Product Image" class="product-image">
+    </div>
+    <div class="product-title"> {{ product.name }} </div>
+    <div class="product-price"> {{ product.price }} </div>
+    <div class="product-amount"> {{ product.finalPrice() }} </div>
+  </div>
+</div>
