--- a/frontend/src/app/user/home/product-carousel/slideshow-carousel/slideshow-carousel.component.html
+++ b/frontend/src/app/user/home/product-carousel/slideshow-carousel/slideshow-carousel.component.html
@@ -1,1 +1,6 @@
-<p>slideshow-carousel works!</p>
+<div class="image-container">
+  <div class="image-text">
+    <h2>Radix Inc.</h2>
+    <p>The Truth In Data</p>
+  </div>
+</div>
