Contact Form implementation

--- a/frontend/src/app/user/contact/contact.component.html
+++ b/frontend/src/app/user/contact/contact.component.html
@@ -1,1 +1,9 @@
-<p>contact works!</p>
+
+<body>
+  <div class="container">
+    <div class="content">
+     <app-contact-info></app-contact-info>
+     <app-contact-form></app-contact-form>
+    </div>
+  </div>
+</body>
