better view looking changes

--- a/frontend/src/app/user/cart/cart.component.html
+++ b/frontend/src/app/user/cart/cart.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="hr"><hr /></div>
     <div class="checkout-site">
-      <div class="number-circle">2</div>
+      <div class="checkout-number-circle">2</div>
       <div class="checkout-text">Checkout</div>
     </div>
   </div>
@@ -39,7 +39,7 @@
                 <button class="remove-button">-</button>
               </div>
               <!-- automated number while clicking in - or + -->
-              2
+              <div class="number-container">2</div>
               <div class="add-button-container">
                 <button class="add-button">+</button>
               </div>
@@ -54,7 +54,7 @@
       <div class="coupon-content">
         <button type="submit" class="coupon-button">
           <!-- icon -->
-          Have a coupon code? >
+          <img src="../../../assets/coupon.png" alt="" id="coupon-image"> Have a coupon code?      >
         </button>
       </div>
       <div class="summary-content">
