updated view of footer,cart and account

--- a/frontend/src/app/core/footer/newsletter/newsletter.component.scss
+++ b/frontend/src/app/core/footer/newsletter/newsletter.component.scss
@@ -2,8 +2,9 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: #f7f7f7;
+  background-color: #f36b5a;
   padding: 1.5rem;
+  color: white;
 
   &__left {
     display: flex;
