--- a/frontend/src/app/user/cart/cart.component.html
+++ b/frontend/src/app/user/cart/cart.component.html
@@ -23,11 +23,11 @@
         <div class="select-box">
           <input type="checkbox" name="select-single" id="" />
         </div>
-        <div class="product-image">
+        <div class="product-image-container">
           <img
             src="{{ product.imgPath }}"
             alt=""
-            style="width: 200px; height: 150px"
+            class="product-image"
           />
         </div>
         <div class="product-content-container">
@@ -46,8 +46,8 @@
               <br /><br />
             </div>
           </div>
-          <div class="product-delete">X</div>
         </div>
+        <div class="product-delete">X</div>
       </div>
     </div>
     <div class="summary-content-container">
