updated frontend structure

--- a/frontend/src/app/core/components/header/topbar/topbar.component.html
+++ b/frontend/src/app/core/components/header/topbar/topbar.component.html
@@ -12,11 +12,15 @@
   </div>
   <div class="right-side">
     <div class="contact-info">
+
+      <i class="fas fa-phone" style="color: #f36b5a;"></i>
       <span class="phone">555-1234</span>
+      <i class="fas fa-envelope" style="color: #f36b5a;"></i>
       <span class="email">contact@example.com</span>
+
     </div>
     <a href="#" class="account">
-      <i class="fas fa-user"> </i>
+      <i class="fas fa-user" style="color: #f36b5a;"></i>
       My Account
     </a>
   </div>
