--- a/frontend/src/app/user/home/product-category/category-item/category-item.component.html
+++ b/frontend/src/app/user/home/product-category/category-item/category-item.component.html
@@ -2,5 +2,6 @@
   <div class="icon">
     <i class="fas fa-laptop fa-3x"></i> <!-- Font Awesome laptop icon at 3x size -->
   </div>
-  <h2 class="title">{{ category }}</h2>
+  <h2 class="title">{{ category.category_name }}</h2>
+  <!-- category.desc ... etc -->
 </div>
