--- a/frontend/src/app/admin/admin-panel/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/admin/admin-panel/admin-dashboard/admin-dashboard.component.html
@@ -1,10 +1,4 @@
-Dashboard
-<div class="dashboard">
-  <h2>Welcome to the Dashboard</h2>
-  <p>This is where you can manage your website content.</p>
-</div>
-
-
+<h1>Dashboard</h1>
 
 <router-outlet>
 
