--- a/frontend/src/app/admin/admin-panel/admin-sidebar/admin-sidebar.component.html
+++ b/frontend/src/app/admin/admin-panel/admin-sidebar/admin-sidebar.component.html
@@ -3,7 +3,7 @@
   <ul>
     <li><a routerLink="/admin">Dashboard</a></li>
     <li><a routerLink="/admin">Users</a></li>
-    <li><a routerLink="/admin/admin-category">Category</a></li>
+    <li><a routerLink="/admin/admin-category/table">Category</a></li>
     <li><a routerLink="/admin">Products</a></li>
     <li><a routerLink="/orders">Orders</a></li>
   </ul>
