--- a/frontend/src/app/admin/admin-panel/admin-dashboard/admin-category/admin-category.component.html
+++ b/frontend/src/app/admin/admin-panel/admin-dashboard/admin-category/admin-category.component.html
@@ -1,3 +1,13 @@
-<app-admin-category-table>
+<div class="dashboard">
+  <h2>{{ title }}</h2>
+  <p>This is where you can manage your website content.</p>
+</div>
 
-</app-admin-category-table>
+
+<div class="table-control-container">
+
+  <router-outlet>
+
+  </router-outlet>
+
+</div>
