--- a/frontend/src/app/admin/admin-panel/admin-dashboard/admin-category/admin-category.component.scss
+++ b/frontend/src/app/admin/admin-panel/admin-dashboard/admin-category/admin-category.component.scss
@@ -1,53 +1,17 @@
-.entity-table {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  overflow: hidden;
-}
+.dashboard {
+  padding: 20px;
+  background-color: #f2f2f2;
+  font-family: Arial, sans-serif;
 
-.entity-table__header {
-  padding: 10px;
-  background-color: #f5f5f5;
-  display: flex;
-  justify-content: flex-end;
-}
+  h2 {
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-size: 1.5em;
+  }
 
-.entity-table__button {
-  border: none;
-  background-color: #007bff;
-  color: #fff;
-  padding: 5px 10px;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-left: 10px;
+  p {
+    margin-bottom: 20px;
+    font-size: 1.2em;
+  }
 }
-
-.entity-table__button--filter {
-  background-color: #ccc;
-}
-
-.entity-table__table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.entity-table__table th,
-.entity-table__table td {
-  border: 1px solid #ddd;
-  padding: 10px;
-}
-
-.entity-table__table th:last-child,
-.entity-table__table td:last-child {
-  text-align: center;
-  width: 100px;
-}
-
-.entity-table__actions {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.entity-table__actions button {
-  margin-left: 5px;
-}
+  
