--- a/frontend/src/app/admin/admin-panel/admin-dashboard/admin-currency/admin-currency.component.html
+++ b/frontend/src/app/admin/admin-panel/admin-dashboard/admin-currency/admin-currency.component.html
@@ -1,1 +1,8 @@
-<p>admin-currency works!</p>
+<div class="dashboard">
+  <h2>{{ title }}</h2>
+  <p>This is where you can manage your website content.</p>
+</div>
+
+<div class="table-control-container">
+  <router-outlet> </router-outlet>
+</div>
