--- a/frontend/src/app/admin/admin-panel/admin-sidebar/admin-sidebar.component.html
+++ b/frontend/src/app/admin/admin-panel/admin-sidebar/admin-sidebar.component.html
@@ -4,6 +4,9 @@
     <li><a routerLink="/admin">Dashboard</a></li>
     <li><a routerLink="/admin">Users</a></li>
     <li><a routerLink="/admin/admin-category/table">Category</a></li>
+    <li><a routerLink="/admin/admin-currency/table">Currency</a></li>
+    <li><a routerLink="/admin/admin-producer/table">Producer</a></li> 
+    <li><a routerLink="/admin/admin-supplier/table">Supplier</a></li>
     <li><a routerLink="/admin">Products</a></li>
     <li><a routerLink="/orders">Orders</a></li>
   </ul>
